@@ -1,18 +1,12 @@
 import argparse
 import os
-import sys
 
 import pytest
 from mock import patch
 
 from mr.developer.extension import Source
 from mr.developer.tests.utils import Process, JailSetup
-
-
-if sys.version_info < (3, 0):
-    b = lambda x: x
-else:
-    b = lambda x: x.encode('ascii')
+from mr.developer.compat import b
 
 
 class MockConfig(object):
